# PipeX

./: CMakeLists.txt  FUTURE_WORK.md  Readme.md  UNIT_TESTS_IMPLEMENTATION_RECOMMENDATIONS.md  _old_DEEP_DIVE_CODE_REVIEW.md  license  main.cpp
.github/workflows/: cmake-multi-platform.yml
cmake/: PrintDebug.cmake  extended_cpp_standard.cmake  fetch_googletest.cmake  my_extended_cpp_standard.cmake  utils.cmake
documentation/: FUTURE_WORK.md  PROJECT_DOCUMENTATION.md  Pipeline.md  UNIT_TESTS_IMPLEMENTATION_RECOMMENDATIONS.md
include/PipeX/: IPipeline.h  PipeX.hpp  PipeXEngine.h  Pipeline.h
include/PipeX/Builders/: PipelineBuilder.h
include/PipeX/_old_version/: StaticPipeline.h
include/PipeX/_old_version/nodes/: StaticFilter.h  StaticNode.h  StaticTransformer.h
include/PipeX/data/: Data.h  IData.h
include/PipeX/debug/: pipex_print_debug.h
include/PipeX/dynamic/: DynamicPipeline.h
include/PipeX/dynamic/data/: Data.h  Data_.h  GenericData.h
include/PipeX/dynamic/nodes/: DynamicAggregator.h  DynamicFilter.h  DynamicNode.h  DynamicTransformer.h
include/PipeX/errors/: InvalidOperation.h  InvalidPipelineException.h  MetadataTypeMismatchException.h  NodeNameConflictException.h  PipeXException.h  PipeX_IO_Exception.h  PipelineNameConflictException.h  TypeMismatchExpection.h
include/PipeX/metadata/: IMetadata.h  PPM_Metadata.h  WAV_Metadata.h  WAV_Metadata.hpp
include/PipeX/nodes/: Aggregator.h  Filter.h  INode.h  Node.h  NodeCRTP.h  Processor.h  Sink.h  Source.h  Transformer.h  node_utils.h
include/PipeX/nodes/Audio/: AmplitudeModulation.h  EQ_BellCurve.h  WAV_AudioPreset_Source.h  WAV_Audio_Sink.h
include/PipeX/nodes/Image/: Color2BlackWhite.h  GainExposure.h  PPM_ImagePreset_Source.h  PPM_ImageSample_Source.cpp  PPM_ImageSample_Source.h  PPM_Image_Sink.h
include/PipeX/nodes/Sound/: AmplitudeModulation.h  EQ_BellCurve.h  EQ_BellCurve.hpp  WAV_SoundPreset_Source.h  WAV_Sound_Sink.h
include/PipeX/nodes/primitives/: Aggregator.h  Filter.h  INode.h  NodeCRTP.h  Processor.h  Sink.h  Source.h  Transformer.h
include/PipeX/nodes/thread_safe/: ConsoleSink.h  ConsoleSink_ts.h  ConsoleSource.h  ConsoleSource_ts.h  Console_threadsafe.h  console_threadsafe.h
include/PipeX/static/: Pipeline.h  StaticPipeline.h
include/PipeX/static/nodes/: Filter.h  Merge.h  Node.h  StaticAggregator.h  Tee.h  Transformer.h
include/PipeX/utils/: Console_threadsafe_utils.h  image_utils.h  node_utils.h  sound_utils.h
include/debug/: print_debug.h
include/extended_cpp_standard/: any.h  memory.h
include/my_extended_cpp_standard/: my_memory.h  my_type_traits.h
notes/: UNIT_TESTS_CHECKLIST.md  UNIT_TESTS_IMPLEMENTATION_RECOMMENDATIONS.md  todo_fixme.md
sandbox/: CMakeLists.txt  data_dynamic_cast.cpp  template_metaprogramming.cpp
src/: main.cpp
src/PipeX/: CMakeLists.txt  PipeX.cpp  PipeXEngine.cpp  Pipeline.cpp
src/PipeX/Audio/: WAV_AudioPreset_Source.cpp
src/PipeX/Image/: PPM_ImagePreset_Source.cpp  PPM_ImageSample_Source.cpp
src/PipeX/Sound/: WAV_SoundPreset_Source.cpp
tests/: CMakeLists.txt  test_node_filter.cpp  test_pipex_dynamic_nodes.cpp  test_pipex_dynamic_pipeline.cpp  test_pipex_nodes.cpp  test_pipex_pipeline.cpp  test_pipex_static_nodes.cpp  test_pipex_static_pipeline.cpp
tests/_old_version/: test_pipex_static_nodes.cpp  test_pipex_static_pipeline.cpp
